FlightPath 6.x Changelog
========================

2022-08-12
  Fixed typos in watchdog() command in the engagements module.
  
  Fixed issue in engagements where all incoming SMS got an error relating to reading media which wasn't there.

  If a number sends a text message, and their CWID cannot be found, the notification message changes to reflect that.


2022-08-11
  Cleaned up logic which loads permissions for users, using less memory.
  
  Added ability for students to schedule appointments with faculty & staff in other departments (not just their
  advisors).


2022-08-10
  Added breadcrumbs to certain admin functions.
  

2022-08-04
  Added new function to db.inc, making it easier to get school_id from a user_id.
  
  Added new setting to School Settings, for specifying departments.
  
  Made changes in School settings to accomodate new 'Appointment settings' form.  
  
  Altered User module to make use of the new "departments" setting as a select list rather than a free-type field.
  
  Built new 'Appointment settings' form, so admins may edit global settings having to do with who may accept appointments.
  

2022-08-02
  Moved around code so that the user module is responsible for displaying text message recipient options (instead of the code being
  in hook_form_alter from engagements).
  
  Fixed bug where deleteing last txt message option wasn't allowed when editing user.
  

2022-07-31
  Added new school setting that allows What If to show all degrees (not just undergrad or grad based on student's rank).
  
  Made it so on the permissions form, underscores are not shown when stating the module name.  Makes it look nicer.
  

2022-07-29
  Made an adjustment to system.module's function system_reload_and_cache_course_inventory(), such that we only get the 10 most recent catalog years
  when building the course inventory file.  We also limit it to 50,000 records, though this might be changed in the future.  By making this